--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -23,7 +23,7 @@
     ],
 
     "pip_requirements": {
-        "fileMatch": ["requirements.*\.txt$"]
+        "fileMatch": ["pyproject.*\.toml$"]
     },
 
     "labels": [
