--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,8 @@ repos:
     rev: 'v0.991'
     hooks:
       - id: mypy
-        exclude: "tests/to-be-tested/"
+        args: ["--disallow-untyped-defs", "--show-error-codes"]
+        exclude: "tests/"
   - repo: https://github.com/psf/black
     rev: 22.12.0
     hooks:
